--- a/web-electrolux/resposive.css
+++ b/web-electrolux/resposive.css
@@ -38,9 +38,10 @@
         padding: 0 2.5rem;
         display: flex;
         justify-content: space-between;
-
     }
-    .product__img {
+
+
+    .product__image {
         width: 2.875rem;
         height: 4rem;
     }
@@ -50,7 +51,6 @@
         font-size: 0.75rem;
         border: 0.063rem solid #011E41;
         border-radius: 0.125rem;
-
     }
     .product__reviews {
         font-weight: 500;
@@ -77,6 +77,10 @@
     .benerfit__infor {
         display: inline-flex;
         padding-left: 10px;
+    }
+    .product-details {
+        background-color: #DFE7EA;
+        height: 2.313rem;
     }
 
 
@@ -171,62 +175,122 @@
         display: flex;
         flex-direction: column;
         padding: 0 15px;
+        border-bottom: 1px solid #D9D9D9;
+        height: 44rem;
+
 
     }
-    .specification__img {
-        order: 3;
-        margin: 0;
-
-    }
-
     .specification__title {}
     .specification__list {}
     .specification__item {}
     .specification__second {
         justify-content: space-around;
         flex-direction: row;
-
     }
     .conten {
         margin-bottom: 24px;
     }
-
     .specification__content {
         order: 1;
     }
     .specification__third {}
-    .complementary-products {
+    .complementary {
         background-color: #DFE7EA;
-
+    }
+    .specification__img {
+        margin: 0;
+        order: 3;
+        height: fit-content;
 
     }
-    /* .specification__img {
-
-        height: 12px;
-        width: 6px;
-        left: 105px;
-        top: 4px;
-        border-radius: 0;
-
-    } */
-    .complementary-products__list {
+    .complementary__list {
         display: flex;
         justify-content: space-around;
     }
-
-
-    .complementary-products__item {
+    .complementary__item {
         flex-direction: column;
         display: flex;
+        align-items: center;
+
+    }
+    .complementary__description {
+
+        font-weight: 400;
+        padding: 0;
+        line-height: 24px;
+
+    }
+    .complementary__description li {
+        display: block;
+        font-size: 1.14286rem;
+        line-height: 2;
+        padding-left: 17px;
+        position: relative;
+        width: 100%;
+        letter-spacing: -0.4px;
+    }
+
+    .complementary__description li::before {
+
+        content: "";
+        font-size: 1.14286rem;
+        line-height: 1.33;
+        position: absolute;
+        top: 10px;
+        left: 0;
+        font-weight: 600;
+        border: 2px solid #011e41;
+        border-radius: 50%;
+        width: 3px;
+        height: 3px;
+    }
+
+
+    h4 {
+        font-size: 1.5rem;
+        margin: 0 0 20px
+    }
+    .complementary__img {
+        height: 210px;
+        width: 210px;
+    }
+    .key-specification {
+    font-size: 1.8rem;
+    }
+    .complementary__content {}
+    .complementary__name {
+        border-bottom: 1px solid #011e41;
+    }
+
+    .complementary__price {}
+    .btn {
+        padding: 10px 0;
+        display: flex;
+
+    }
+    .btn__left {
+        background: #fff;
+        color: #011e41;
+        border: 1px solid #011e41;
+        text-transform: uppercase;
+        border-radius: 2px;
+        font-weight: 600;
+        padding: 10px 20px;
+        width: 50%;
+        margin-right: 9px;
 
 
     }
-    .complementary-produts__content {}
-    .mau {}
-    .complementary-produts__price {}
-    .btn {}
-    .btn__left {}
-    .btn__right {}
+    .btn__right {
+        background-color: #011e41;
+        border-color: #011e41;
+        color: #fff;
+        font-weight: 600;
+        padding: 10px 50px;
+        border-radius: 2px;
+        width: 50%;
+
+    }
 
 } /* Mobile */
 @media(max-width : 62rem) {
@@ -236,7 +300,9 @@
     .benerfit__text,
     .slide__prev,
     .slide__next,
-    .slide__icon-dot {
+    .slide__icon-dot,
+    .complementary {
+
 
         display: none;
     }
