--- a/web-electrolux/style.css
+++ b/web-electrolux/style.css
@@ -35,21 +35,27 @@ body {
     background-color: #ffffff;
     box-shadow: 0 1px 0 #DFE7EA;
 }
+.benerfit__img {
+    height: 64px;
+    width: 46px;
+    left: 9px;
+    top: 0;
+
+}
 .nav__link {
     padding: 0.5rem;
     color: #011e41;
 }
-.nav__mobile {
-    padding: 1rem;
-    text-decoration: none;
-    font-weight: 700;
-}
+
 .product {
-    background: #EAEEF2;
+background: #EAEEF2;
+
+
     font-weight: 600;
     line-height: 17px;
     height: 5.875rem;
 }
+
 .product__right {
     display: flex;
     align-items: center;
@@ -63,15 +69,47 @@ body {
     padding: 0.625rem 0.313rem;
 
 }
-.product__right {
-    color: #FFFFFF;
-    padding: 0.938rem 0.688rem;
-    height: 4.5;
+/* .product__second,
+.product__list,
+.product-item {
 
+    display: inline-block;
+    list-style: none;
+    padding: 15px 5px;
+    margin: 0 25px;
+    position: relative;
 }
-.product-second {
+
+.product__second,
+.product__list,
+.product-item,
+.product-link {
+
+    text-decoration: none;
+    color: #b7e7f6;
+}
+.product__second,
+.product__list,
+.product-item ::after {
+    content: "";
+    width: 100%;
+    height: 3px;
+    background: transparent;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.product__second,
+.product__list,
+.product-item:hover::after {
+
+    background: #011E41;
+
+} */
+.product__second {
     background-color: #DFE7EA;
     height: 2.313rem;
+
 }
 .product-item {
     list-style: none;
@@ -80,7 +118,6 @@ body {
 .product__list {
     display: flex;
     justify-content: space-between;
-    padding: 0.75rem 1rem;
     margin: 0;
 }
 .product-link {
@@ -177,28 +214,50 @@ body {
     flex-direction: column;
     padding: 0 15px;
 }
-h2 {
-    text-align: center;
-}
 .content-catenory {
     list-style-type: none;
     border-top: 1px solid #333;
     padding: 0;
     font-weight: 600;
     line-height: 26px;
+    margin: 1rem 0;
+
+    font-size: 1.3rem;
+
+}
+.complementary__title,
+.specification__title {
+    text-align: center;
+    font-size: 2.5rem;
     margin: 0;
+    padding: 5.313rem 0 2.188rem;
+
 }
 
 .specification__img {
-    width: 20rem;
     margin: 0 auto;
     order: 1;
-
 }
 .conten {
     margin-bottom: 24px;
 }
-
+.content-dowload {
+    font-size: 1rem;
+    font-weight: 500;
+    text-decoration: none;
+    color: #011e41;
+} 
+li {
+    margin-top: 0.5rem ;
+}
+.content-manual-download{
+    list-style-type: none;
+    padding: 0;
+    font-weight: 600;
+    line-height: 1.625rem;
+    margin: 1rem 0;
+    font-size: 1.3rem;
+}
 .specification-title {
     font-weight: 500;
     margin-bottom: 0.5rem;
@@ -206,6 +265,7 @@ h2 {
 }
 .specification__list {}
 .specification__item {}
+
 .specification__content {
     order: 3;
 
@@ -219,6 +279,7 @@ h2 {
 .specification__third {
     display: flex;
     justify-content: center;
-    order: 3;
+   
 
 }
+.specification__open {}
